# scicomp_project_copy

./: .gitignore  Cargo.toml  Readme.md  generate_matrices.py  generate_matrices_dense.py  generate_matrices_experiments.py  generate_matrices_sparse.py  generate_plots.py  generate_toeplitz.py
AlisTestingArea/gpu/: Cargo.toml
blas/: Cargo.toml  Readme.md
cpu/: Cargo.toml  Readme.md
cublas/: Cargo.toml
cusparse/: Cargo.toml  build.rs
faksgpu/: Cargo.toml
gpu/: Cargo.toml  Readme.md
gpu/shader/: matrix_mult.wgsl  sparse_mul.wgsl
gpu/src/: dense.rs  dense_dev.rs  lib.rs  main.rs  main_dense.rs  main_sparse.rs  sparse_dev.rs
gpu/src/sparse/: csr_buffer.rs  gpu_sparse_multiplyer.rs  mod.rs  result_buffer.rs
gpu/tests/: dense.rs  sparse.rs
matrix_base/: Cargo.toml  Readme.md
matrix_instances/: a001.mtx  a002.mtx  a_blas.mtx  b_blas.mtx  bigB001.mtx
output/: 2025-02-04_17-42-53_result_times_overhead_repeat_count_10.csv  2025-02-04_17-42-53_result_times_raw_multiplication_repeat_count_10.csv  2025-02-04_17-42-53result_times_total_repeat_count_10.csv  2025-02-04_18-45-49_result_times_overhead_repeat_count_10.csv  2025-02-04_18-45-49_result_times_raw_multiplication_repeat_count_10.csv  2025-02-04_18-45-49_result_times_total_repeat_count_10.csv  result_times_overhead_repeat_count_10_2025-02-04_04-10-11.csv  result_times_overhead_repeat_count_1_2025-02-04_03-41-09.csv  result_times_raw_multiplication_repeat_count_10_2025-02-04_04-10-11.csv  result_times_raw_multiplication_repeat_count_1_2025-02-04_03-41-09.csv  result_times_total_repeat_count_10_2025-02-04_04-10-11.csv  result_times_total_repeat_count_1_2025-02-04_03-41-09.csv
seminar_benchmark_runner/: Cargo.toml  Readme.md
seminar_benchmark_runner/src/: main.rs
src/: lib.rs  main.rs
tests/: cpu.rs
workspace_runner/: Cargo.toml
workspace_runner/src/: main.rs
(+281 files in other folders)
